fix award picture spacing

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -1790,7 +1790,7 @@ a:visited:hover {
             line-height: 0.75em;
         }
         .award {
-            background: url(../images/css/pict_star.png) no-repeat left center;
+            background: url(../images/css/pict_star.png) no-repeat left top;
             background-size: 0.9em auto;
             margin-top: 0.15em;
             padding-left: 1.1em;
